--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,6 +16,19 @@
        background-size:cover;
        background-position:bottom right">
 
+       <div ng-repeat="message in messages" layout = "column" layout-align="{{message.sender=='BOT' ? 'start start' : 'start end'}}">
+        <md-card style="max-width: 75%
+        border-radius: 10px; padding: 10px; font-size: 14px"
+        ng-style="message.sender=='BOT' ?
+        {'background-color': '#FFB74D'} :
+        {'background-color': '#2c6cd3'}">
+        <span style="color:black">{{message.text}}</span>
+        <span ng-bind-html="trust(message.feedResponse.description)">{{message.feedResponse.description}}</span>
+        <span layout-align="end end" style="margin-top: 4px; float: left ; color: #666666 ; font-size: 10px;"> 
+          {{message.time}} </span>
+        </md-card>
+       </div>
+
        </md-content>
        <md-card flex="10" style="margin: 0px" layout="row" layout-align="space-between center" class="md-whiteframe-8dp">
         <form flex="90" ng-submit="sendMessage()" layout="row">
@@ -24,7 +37,7 @@
                    <input ng-model="userMessage">
                </md-input-container>
            </form> 
-
+ 
            <md-button flex="10" style="height: 100%; padding: 0px " class="md-icon-button " ng-click="sendMessage() ">
                <md-icon style="height: 100%; padding: 0px; " md-svg-icon="/assets/images/ic_chat_48px.svg"></md-icon>
            </md-button>
