Adding prod URL for wss

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
        background-position:bottom right">
 
        <div ng-repeat="message in messages" layout = "column" layout-align="{{message.sender=='BOT' ? 'start start' : 'start end'}}">
-        <md-card style="max-width: 75%
+        <md-card style="max-width: 75%;
         border-radius: 10px; padding: 10px; font-size: 14px"
         ng-style="message.sender=='BOT' ?
         {'background-color': '#FFB74D'} :
